enable_hangout_services_extension = false
enable_iterator_debugging = false
enable_mdns = false
enable_mse_mpeg2ts_stream_parser = true
enable_nacl = false
enable_one_click_signin = false
enable_reading_list = false
enable_remoting = false
enable_reporting = false
enable_service_discovery = false
enable_widevine = true
ffmpeg_branding = "Chrome"
fieldtrial_testing_like_official_build = true
google_api_key=""
google_default_client_id=""
google_default_client_secret=""
is_component_build = true
is_debug = false
is_official_build = true
proprietary_codecs = true
safe_browsing_mode=0
symbol_level = 0
target_cpu = "x64"
use_jumbo_build = true
use_official_google_api_keys = false
